--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Horiseon</title>
 </head>
 
+<!-- header -->
 <body>
     <header class="header">
+        <!-- brand header -->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
+            <!-- navigation -->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,14 +27,20 @@
             </ul>
         </nav>
     </header>
+
+    <!-- hero image -->
     <figure class="hero"></figure>
+
+    <!-- main content -->
     <main class="content">
+        <!-- search engine optimization -->
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
+            <!-- online reputation management -->
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
@@ -40,6 +49,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        <!-- social media marketing -->
         <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -48,7 +58,10 @@
             </p>
         </section>
     </main>
+
+    <!-- additional benefits -->
     <aside class="benefits">
+        <!-- lead generation -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -56,6 +69,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
+        <!-- brand awareness -->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -63,6 +77,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
+        <!-- cost management -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
@@ -71,6 +86,8 @@
             </p>
         </section>
     </aside>
+
+    <!-- footer -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
